# Dynamite

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
NewProject/: NewProject.jucer  README.md  build_test.sh  test_threshold.cpp  threshold_test
NewProject/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
NewProject/Builds/MacOSX/Dynamite.xcodeproj/: project.pbxproj
NewProject/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
NewProject/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
NewProject/Source/: DynamiteComponent.cpp  DynamiteComponent.h  DynamiteEngine.cpp  DynamiteEngine.h  DynamiteProcessor.cpp  DynamiteProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
NewProject/Tests/: dynamite_test.cpp
